fixed button spacing

--- a/src/sharedstyles.css
+++ b/src/sharedstyles.css
@@ -346,6 +346,10 @@ p {
   margin-bottom: 10px;
 }
 
+#userName {
+  align-items: center;
+  color: #BAB9B9;
+}
 
 
 .likeImg {
@@ -437,18 +441,22 @@ h2 {
 }
 
 
+#profileButton {
+  display: flex!important;
+  align-items: center!important;
+}
+
 @media only screen and (max-width: 480px) {
   #floating-panel {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 5;
+    z-index: 4;
     width: 100%;
     /* height: 200px; */
     padding: 10px;
     border: none;
     text-align: left;
-    font-family: "Roboto", "sans-serif";
     line-height: 30px;
     display: flex;
     align-items: flex-start;
@@ -461,11 +469,6 @@ h2 {
     flex-direction: column;
   }
 
-  #profileButton {
-    display: flex!important;
-    align-items: center;
-  }
-  
   .functionalButton {
     /* margin-bottom: 10px; */
   }
